--- a/style.css
+++ b/style.css
@@ -1,52 +1,69 @@
-body {
-	  background-color: black;
-}
-html {
-  margin: 0;
-}
-
 body,
 html {
   height: 100%;
+	width: 100%;
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
+	background-color: #000;
 }
 
-body,td,th {
+body {
 	font-family: 'Calibre-Light', sans-serif;
-  	font-size: 36px;
-  	font-weight: 200;
-  	letter-spacing: 0.08em;
-  	line-height: 2.4em;
+  font-size: 1.4em;
+  font-weight: 200;
+	letter-spacing: 0.08em;
+	line-height: 2.4em;
 	color: rgba(255, 255, 255, .8);
 }
 
 a {
 	text-decoration: none;
 	color: #fff;
-    display: inline-block;
-    line-height: 1.2em;
-    font-family: 'TiemposText-Regular', serif;
-    font-weight:100;
+  font-family: 'TiemposText-Regular', serif;
+	font-size: 1em;
+  font-weight:100;
+	line-height: 1.2em;
+	display: inline-block;
+}
+
+p {
+	margin: 0;
+	padding: 10% 15%;
+}
+
+.wrapper {
+  display: inline-block;
+  height: 100vh;
+  width: 50vw;
+  padding: 0;
+  margin: 0;
+  background: #000;
+}
+
+.wrapper img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.small {
+		font-family: 'Calibre-LightItalic', sans-serif;
+  	font-size: .9em;
+		line-height: 1.8em;
 }
 
 .link:after {
     content: '';
     display: block;
-    height: 2px;
+    height: .25em;
     width: 0;
-    border-bottom: 2px solid transparent;
-    background: transparent;
-    transition: width .5s ease, background-color .5s ease;
-
+		transition: width .5s ease;
+		border-bottom: .05em solid #fff;
 }
 
-.link:hover:after{;
-	cursor:pointer;
-	border-bottom: 2px solid #fff;
-    width: 100%;
+.link:hover:after {
+  width: 100%;
+	transition: width .5s ease;
 }
 
 .the-icons {
@@ -63,20 +80,18 @@ a {
 
 }
 
-/* for 1920 or less */
-@media screen and (max-width:1920px) {
-	body {font-size: 28px;}
+.split-screen {
+  display: flex;
+  min-height: 100vh;
 }
-
-/* for 1500 or less */
-@media screen and (max-width:1500px) {
-	body {font-size: 24px;}
+.split-screen__left,
+.split-screen__right {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
-
-/* for 1240 or less */
-@media screen and (max-width:1240px) {
-	body {font-size: 22px;}
-  	font-weight: 300;
+.split-screen__right {
+  background-color: #000;
 }
 
 /* for 1080 or less */
@@ -97,7 +112,7 @@ a {
   .container {
     margin-right: auto;
     margin-left: 0;
-    padding: 0 0 0 10%;
+    padding: 0;
   }
 
   .container:before,
@@ -110,16 +125,21 @@ a {
     clear: both;
   }
 
-  p {
-    margin: 0 0 10px;
-    padding: 5% 40% 0 10%;
-  }
 }
 
 /* for 800 or less */
 @media screen and (max-width:800px) {
-  p{
-	  padding: 60px 8% 0 8%;
-	  margin: 0 0 10px;
+	.split-screen {
+	  display: flex;
+	  min-height: 50vh;
+		min-width: 100vw
+	}
+	.split-screen__left,
+	.split-screen__right {
+	  display: flex;
+	  flex-direction: row;
+	  justify-content: center;
+	  align-items: center;
+	  flex: 2;
 	}
 }
