--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 a {
 	text-decoration: none;
 	color: #fff;
-  font-family: 'TiemposText-Regular', serif;
+  font-family: 'TiemposText-LightItalic', serif;
 	font-size: 1em;
   font-weight:100;
 	line-height: 1.2em;
