--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body,
 html {
-  height: 100%;
+    font-size: 20px;
+    height: 100%;
 	width: 100%;
   margin: 0;
   padding: 0;
@@ -9,7 +10,6 @@ html {
 
 body {
 	font-family: 'Calibre-Light', sans-serif;
-  font-size: 1.4em;
   font-weight: 200;
 	letter-spacing: 0.08em;
 	line-height: 2.4em;
@@ -83,9 +83,8 @@ p {
 
 /* for 1080 or less */
 @media screen and (max-width:1080px) {
-	body {font-size: 18px;}
+	body {font-size: .9em;}
 }
-
 
 /* for 800 or less */
 @media screen and (max-width:800px) {
@@ -96,9 +95,17 @@ p {
 		height:50vh;
 	}
   p {
-  	padding: 5% 10%;
+  	padding: 5% 8%;
   }
   body {
-    font-size: 14px;
+    font-size: .7em;
+  }
+}
+
+/* for 800 or less */
+@media screen and (max-width:400px) {
+
+  body {
+    font-size: .5em;
   }
 }
